# cbba_sim

./: .gitignore  README.md  cbba_sim_workspace.code-workspace  cbta_workspace.code-workspace
H1_R3/: H1_R3_Tile0.txt  H1_R3_Tile1.txt  H_1_R_3_Tile_0_conn_17.txt  H_1_R_3_Tile_1_conn_5.txt  ttd_H1_R3.txt
H2_R3/: H2_R3_Tile1.txt  H2_R3_Tile3.txt  H_2_R_3_Tile_0.txt  H_2_R_3_Tile_0_conn_9.txt  H_2_R_3_Tile_1_conn_11.txt  H_2_R_3_Tile_2.txt  H_2_R_3_Tile_2_conn_9.txt  H_2_R_3_Tile_3_conn_0.txt  ttd_H2_R3.txt
H3_R3/: H_3_R_3_Tile_0.txt  H_3_R_3_Tile_0_conn_12.txt  H_3_R_3_Tile_1.txt  H_3_R_3_Tile_1_conn_5.txt  H_3_R_3_Tile_2.txt  H_3_R_3_Tile_2_conn_9.txt  H_3_R_3_Tile_3.txt  H_3_R_3_Tile_3_conn_2.txt  H_3_R_3_Tile_4.txt  H_3_R_3_Tile_4_conn_0.txt  H_3_R_3_Tile_5.txt  H_3_R_3_Tile_5_conn_8.txt  H_3_R_3_Tile_6.txt  H_3_R_3_Tile_6_conn_1.txt  H_3_R_3_Tile_7.txt  H_3_R_3_Tile_7_conn_4.txt  ttd_H3_R3.txt
raspi_setup/: README.md  WPI_Wireless_setup.sh  fix_java_and_devel_setup.sh  image-backup  install_spot.sh
src/: CMakeCache.txt  CMakeLists.txt
src/cbba/: CMakeLists.txt
src/cbba/include/cbba/: cbba_agent.hpp  cbba_task.hpp
src/cbba/src/: cbba_agent.cpp  cbba_task.cpp
src/cbba/test/: test_Kclosest.cpp  test_cbba.cpp  test_map.cpp  test_path_length.cpp  test_syn.cpp  test_syn_v4.cpp  test_syn_v5.cpp  test_tasks.cpp
src/cbga/: CMakeLists.txt
src/cbga/include/cbga/: cbga_agent.hpp  cbga_task.hpp
src/cbga/src/: cbga_agent.cpp  cbga_task.cpp
src/cbga/test/: test_cbga.cpp  test_cbga_cbta.cpp  test_cbga_wt.cpp
src/cbta/: CMakeLists.txt
src/cbta/include/cbta/: graph_lift.hpp  hcost_interface.hpp  hcost_tile_library.hpp  json_access.hpp
src/cbta/include/nlohmann/detail/conversions/: to_json.hpp
src/cbta/src/: defn_hlevel.cpp  defn_tile.cpp  defn_tile_block.cpp  get_json.cpp  graph_lift.cpp  hcost_interface.cpp
src/cbta/test/: create_json_file.cpp  test_cbba_cbta.cpp  test_cbta.cpp  test_cbta_json.cpp  test_for_error.cpp  test_json_output.cpp  test_lifted_graph.cpp  test_path_length_cbta.cpp  test_syn_cbta.cpp
src/cmake/: lcmtypes.cmake
src/config/: agent.ini  map.ini  task.ini
src/demo/: CMakeLists.txt
src/graph/: edge.hpp  graph.hpp  vertex.hpp
src/graph/algorithms/: astar.hpp
src/lcmlib/: CMakeLists.txt
src/lcmlib/include/: GPIOClass.hpp
src/lcmlib/include/lcmlib/: msg_exchange.hpp
src/lcmlib/include/nlohmann/detail/: value_t.hpp
src/lcmlib/src/: GPIOClass.cpp  msg_exchange.cpp
src/lcmlib/test/: blink_test.cpp  motor.py  motor2.py  publish_motor.cpp  publisher.cpp  subscribe_motor.cpp  subscriber.cpp  test_gpio.cpp  test_pi1.cpp  test_pi1_cbta.cpp  test_pi2.cpp  test_pi2_cbta.cpp  test_pi3.cpp  test_pi3_cbta.cpp
src/lcmtypes/: cbba_msg.lcm  example_t.lcm
src/ltl/: CMakeLists.txt
src/ltl/include/ltl/: buchi_automaton.hpp  cell_label.hpp  product_automaton.hpp  region_label.hpp  spot_hoa_interpreter.hpp
src/ltl/src/: buchi_automaton.cpp  product_automaton.cpp  spot_hoa_interpreter.cpp
src/ltl/test/: test_avoid_ROI.cpp  test_buchi.cpp  test_cosafe.cpp  test_multi_area.cpp  test_product.cpp  test_product_complex.cpp
src/map/: CMakeLists.txt
src/map/include/map/: common_types.hpp  square_grid.hpp
src/map/src/: square_grid.cpp
src/map/test/: test_grid_map.cpp  test_uncertain_grid_map.cpp  test_vis_lib.cpp
src/utility/: CMakeLists.txt
src/utility/include/config_reader/: config_reader.hpp
src/vis/: CMakeLists.txt
src/vis/include/vis/: graph_vis.hpp  vis_utils.hpp
src/vis/src/: graph_vis.cpp  vis_utils.cpp
src/vis/test/: Mathgl.txt  test_mathgl_vis.cpp
